--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -39,8 +39,9 @@ Vagrant.configure("2") do |config|
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  config.vm.network "public_network", bridge: "en0: Wi-Fi (Wireless)"
-
+  # config.vm.network "public_network", bridge: "en0: Wi-Fi (Wireless)"
+  config.vm.network "public_network", bridge: "wlp59s0"
+  
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
@@ -70,10 +71,11 @@ Vagrant.configure("2") do |config|
    su - vagrant
    pwd
    curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-   python get-pip.py --user
-   python -m pip install --user ansible
-   python -m pip install --user paramiko
-   yes | ssh-keygen -b 2048 -t rsa -f /home/vagrant/.ssh/id_rsa -q -N ""
-   cp /home/vagrant/.ssh/id_rsa.pub /vagrant
+   ls
+   su - vagrant -c 'python get-pip.py --user'
+   su - vagrant -c 'python -m pip install --user ansible'
+   su - vagrant -c 'python -m pip install --user paramiko'
+   su - vagrant -c 'yes | ssh-keygen -b 2048 -t rsa -f /home/vagrant/.ssh/id_rsa -q -N ""'
+   su - vagrant -c 'cp /home/vagrant/.ssh/id_rsa.pub /vagrant'
    SHELL
 end
